overflow-x fix

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,7 +6,6 @@
     height: 75vh;
     overflow-y: scroll;
     padding-right: 5px;
-    max-width: 69vw;
 }
 #messages::-webkit-scrollbar-track
 {
